image caption fix on mobile

--- a/less/framework/base/images.less
+++ b/less/framework/base/images.less
@@ -83,5 +83,12 @@
   }
 }
 
+@media (max-width: 43.125em) {
+  .image-caption-container .caption {
+    position:relative;
+  }
+}
+
+
 
 
